--- a/redwoodblog/.env.defaults
+++ b/redwoodblog/.env.defaults
@@ -3,5 +3,5 @@
 # system. Any custom values should go in .env and .env should *not* be checked
 # into version control.
 
-DATABASE_URL=file:./dev.db
+DATABASE_URL="postgresql://omega_rew:c6eqgnwwv09cxlzo@omega-postgresql-sgp1-08776-do-user-4090996-0.db.ondigitalocean.com:25061/TestPool?sslmode=require"
 BINARY_TARGET=native
