--- a/redwoodblog/redwood.toml
+++ b/redwoodblog/redwood.toml
@@ -8,9 +8,11 @@
 # By default, a Redwood app's apiProxyPath is the same as Netlify's.
 
 [web]
+  host = "0.0.0.0"
   port = 8910
   apiProxyPath = "/.netlify/functions"
 [api]
+  host = "0.0.0.0"
   port = 8911
 [browser]
   open = true
