commit bynary target

--- a/redwoodblog/.env.defaults
+++ b/redwoodblog/.env.defaults
@@ -4,4 +4,4 @@
 # into version control.
 
 DATABASE_URL="postgresql://omega_rew:c6eqgnwwv09cxlzo@omega-postgresql-sgp1-08776-do-user-4090996-0.db.ondigitalocean.com:25061/TestPool?sslmode=require"
-BINARY_TARGET=native
+BINARY_TARGET="rhel-openssl-1.0.x"
