--- a/redwoodblog/redwood.toml
+++ b/redwoodblog/redwood.toml
@@ -1,16 +1,18 @@
 # This file contains the configuration settings for your Redwood app.
-# This file is also what makes your Redwood app a Redwood app. 
+# This file is also what makes your Redwood app a Redwood app.
 # If you remove it and try to run `yarn rw dev`, you'll get an error.
 #
-# For the full list of options, see the "App Configuration: redwood.toml" doc: 
+# For the full list of options, see the "App Configuration: redwood.toml" doc:
 # https://redwoodjs.com/docs/app-configuration-redwood-toml
 #
 # By default, a Redwood app's apiProxyPath is the same as Netlify's.
 
 [web]
+  host = "0.0.0.0"
   port = 8910
   apiProxyPath = "/.netlify/functions"
 [api]
+  host = "0.0.0.0"
   port = 8911
 [browser]
   open = true
